unpackaged/main/default/objects/Customer_Invoice__c/fields/Account_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Account_Email_Address__c</fullName>
    <description>Email address pulled from account - this field is stamped on the creation of the invoice, so will not be updated if there is a later change to the email address on the account</description>
    <inlineHelpText>Email address pulled from account - this field is stamped on the creation of the invoice, so will not be updated if there is a later change to the email address on the account</inlineHelpText>
    <label>Account Email Address</label>
    <type>Email</type>
</CustomField>