unpackaged/main/default/objects/Customer_Invoice__c/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <description>Cash, Credit or Key Account</description>
    <formula>TEXT(Account__r.Account_Type__c)</formula>
    <inlineHelpText>Cash, Credit or Key Account</inlineHelpText>
    <label>Account Type</label>
    <type>Text</type>
</CustomField>