unpackaged/main/default/objects/Customer_Invoice__c/fields/Address_Trace__c.field-meta.xml
<CustomField>
    <fullName>Address_Trace__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Address Trace</label>
    <type>Checkbox</type>
</CustomField>