unpackaged/main/default/objects/Customer_Invoice__c/fields/Address_Trace_Date__c.field-meta.xml
<CustomField>
    <fullName>Address_Trace_Date__c</fullName>
    <label>Address Trace Date</label>
    <type>Date</type>
</CustomField>