unpackaged/main/default/objects/Customer_Invoice__c/fields/Authorisation__c.field-meta.xml
<CustomField>
    <fullName>Authorisation__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Authorisation</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>asp04__Authorisation__c.Customer__c</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>asp04__Authorisation__c</referenceTo>
    <relationshipLabel>Customer Invoices</relationshipLabel>
    <relationshipName>Customer_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>