unpackaged/main/default/objects/Customer_Invoice__c/fields/Authorised_FOC__c.field-meta.xml
<CustomField>
    <fullName>Authorised_FOC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Authorised FOC</label>
    <type>Checkbox</type>
</CustomField>