unpackaged/main/default/objects/Customer_Invoice__c/fields/BACS_Reference__c.field-meta.xml
<CustomField>
    <fullName>BACS_Reference__c</fullName>
    <label>BACS Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>