unpackaged/main/default/objects/Customer_Invoice__c/fields/Balance_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>Balance_Outstanding__c</fullName>
    <formula>Charge_Gross__c -   Customer_Credit_Total__c - Sum_of_Payments__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance Outstanding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>