unpackaged/main/default/objects/Customer_Invoice__c/fields/Balance_Outstanding_with_Interest__c.field-meta.xml
<CustomField>
    <fullName>Balance_Outstanding_with_Interest__c</fullName>
    <formula>Balance_Outstanding__c  +  Interest_Fee_Owed__c - Interest_Fee_Received__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance Outstanding with Interest</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>