unpackaged/main/default/objects/Customer_Invoice__c/fields/Billing_Town__c.field-meta.xml
<CustomField>
    <fullName>Billing_Town__c</fullName>
    <formula>Account__r.BillingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Town</label>
    <type>Text</type>
</CustomField>