unpackaged/main/default/objects/Customer_Invoice__c/fields/Card_on_Record_4_Digits__c.field-meta.xml
<CustomField>
    <fullName>Card_on_Record_4_Digits__c</fullName>
    <formula>RIGHT( Card_On_Record__c , 4)</formula>
    <label>Card on Record 4 Digits</label>
    <type>Text</type>
</CustomField>