unpackaged/main/default/objects/Customer_Invoice__c/fields/Card_On_Record__c.field-meta.xml
<CustomField>
    <fullName>Card_On_Record__c</fullName>
    <formula>Authorisation__r.asp04__Account_Reference__c</formula>
    <label>Card On Record</label>
    <type>Text</type>
</CustomField>