unpackaged/main/default/objects/Customer_Invoice__c/fields/Cash_Chq_BACs_Cust_Payment_Confirm_Sent__c.field-meta.xml
<CustomField>
    <fullName>Cash_Chq_BACs_Cust_Payment_Confirm_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has the Payment Confirmation email to the Customer for Cash, Cheque and BACs been sent?</description>
    <inlineHelpText>Has the Payment Confirmation email to the Customer for Cash, Cheque and BACs been sent?</inlineHelpText>
    <label>Cash-Chq-BACs Cust Payment Confirm Sent</label>
    <type>Checkbox</type>
</CustomField>