unpackaged/main/default/objects/Customer_Invoice__c/fields/Charge_Gross__c.field-meta.xml
<CustomField>
    <fullName>Charge_Gross__c</fullName>
    <description>Sum of all the Line Item records using their &#39;Charge Gross&#39; value</description>
    <inlineHelpText>Sum of all the Line Item records using their &#39;Charge Gross&#39; value</inlineHelpText>
    <label>Charge Gross</label>
    <summarizedField>Customer_Invoice_Line_Item__c.Charge_Gross__c</summarizedField>
    <summaryForeignKey>Customer_Invoice_Line_Item__c.Customer_Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>