unpackaged/main/default/objects/Customer_Invoice__c/fields/Charge_Gross_Minus_Credits__c.field-meta.xml
<CustomField>
    <fullName>Charge_Gross_Minus_Credits__c</fullName>
    <formula>Charge_Gross__c - Customer_Credit_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Charge Gross Minus Credits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>