unpackaged/main/default/objects/Customer_Invoice__c/fields/Charge_Net__c.field-meta.xml
<CustomField>
    <fullName>Charge_Net__c</fullName>
    <formula>Charge_Rollup_Net__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Charge Net</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>