unpackaged/main/default/objects/Customer_Invoice__c/fields/Charge_Other_Net__c.field-meta.xml
<CustomField>
    <fullName>Charge_Other_Net__c</fullName>
    <label>Charge Other Net</label>
    <summarizedField>Customer_Invoice_Line_Item__c.Charge_Net__c</summarizedField>
    <summaryFilterItems>
        <field>Customer_Invoice_Line_Item__c.Charge_Category__c</field>
        <operation>equals</operation>
        <value>Other</value>
    </summaryFilterItems>
    <summaryForeignKey>Customer_Invoice_Line_Item__c.Customer_Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>