unpackaged/main/default/objects/Customer_Invoice__c/fields/Charge_Rollup_Net__c.field-meta.xml
<CustomField>
    <fullName>Charge_Rollup_Net__c</fullName>
    <label>Charge Rollup Net</label>
    <summarizedField>Customer_Invoice_Line_Item__c.Charge_Net__c</summarizedField>
    <summaryForeignKey>Customer_Invoice_Line_Item__c.Customer_Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>