unpackaged/main/default/objects/Customer_Invoice__c/fields/Charge_VAT__c.field-meta.xml
<CustomField>
    <fullName>Charge_VAT__c</fullName>
    <description>Roll-up of line item VAT</description>
    <label>Charge VAT</label>
    <summarizedField>Customer_Invoice_Line_Item__c.Charge_VAT__c</summarizedField>
    <summaryForeignKey>Customer_Invoice_Line_Item__c.Customer_Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>