unpackaged/main/default/objects/Customer_Invoice__c/fields/Comms_Control_Invoice_Job_complete__c.field-meta.xml
<CustomField>
    <fullName>Comms_Control_Invoice_Job_complete__c</fullName>
    <formula>Account__r.Comms_Control_Invoice_Job_complete__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Comms Control Invoice produced on completion of Job</inlineHelpText>
    <label>Comms Control Invoice Job complete</label>
    <type>Checkbox</type>
</CustomField>