unpackaged/main/default/objects/Customer_Invoice__c/fields/Comms_Control_Request_of_pay__c.field-meta.xml
<CustomField>
    <fullName>Comms_Control_Request_of_pay__c</fullName>
    <formula>Account__r.Comms_Control_Request_of_pay__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Comms Control Request of payment goes to client</inlineHelpText>
    <label>Comms Control Request of pay</label>
    <type>Checkbox</type>
</CustomField>