unpackaged/main/default/objects/Customer_Invoice__c/fields/Count_of_Open_Cases__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Open_Cases__c</fullName>
    <formula>Job__r.Count_of_Open_Cases__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count of Open Cases</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>