unpackaged/main/default/objects/Customer_Invoice__c/fields/Court__c.field-meta.xml
<CustomField>
    <fullName>Court__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Court</label>
    <type>Checkbox</type>
</CustomField>