unpackaged/main/default/objects/Customer_Invoice__c/fields/Court_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Court_Sent_Date__c</fullName>
    <label>Court Sent Date</label>
    <type>Date</type>
</CustomField>