unpackaged/main/default/objects/Customer_Invoice__c/fields/Credit_Deposit_Email__c.field-meta.xml
<CustomField>
    <fullName>Credit_Deposit_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credit Deposit Email</label>
    <type>Checkbox</type>
</CustomField>