unpackaged/main/default/objects/Customer_Invoice__c/fields/Customer_Credit_Total__c.field-meta.xml
<CustomField>
    <fullName>Customer_Credit_Total__c</fullName>
    <label>Customer Credit Total</label>
    <summarizedField>Customer_Credit_Note__c.Charge_Gross__c</summarizedField>
    <summaryForeignKey>Customer_Credit_Note__c.Customer_Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>