unpackaged/main/default/objects/Customer_Invoice__c/fields/Customer_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_First_Name__c</fullName>
    <formula>Account__r.First_Name__c</formula>
    <label>Customer First Name</label>
    <type>Text</type>
</CustomField>