unpackaged/main/default/objects/Customer_Invoice__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>This will show the Date the invoice was raised</description>
    <label>Date</label>
    <type>Date</type>
</CustomField>