unpackaged/main/default/objects/Customer_Invoice__c/fields/Date_to_Action__c.field-meta.xml
<CustomField>
    <fullName>Date_to_Action__c</fullName>
    <label>Date to Action</label>
    <type>Date</type>
</CustomField>