unpackaged/main/default/objects/Customer_Invoice__c/fields/Deposit_Invoice_Balance_Received__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Invoice_Balance_Received__c</fullName>
    <formula>Job__r.Deposit_Invoice_Balance_Received__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deposit Invoice Balance Received</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>