unpackaged/main/default/objects/Customer_Invoice__c/fields/Deposit_Invoice_Name__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Invoice_Name__c</fullName>
    <formula>Job__r.Deposit_Invoice__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deposit Invoice Name</label>
    <type>Text</type>
</CustomField>