unpackaged/main/default/objects/Customer_Invoice__c/fields/DRC_Account__c.field-meta.xml
<CustomField>
    <fullName>DRC_Account__c</fullName>
    <formula>Account__r.DRC_Applies__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DRC Account</label>
    <type>Checkbox</type>
</CustomField>