unpackaged/main/default/objects/Customer_Invoice__c/fields/DRC_Invoice__c.field-meta.xml
<CustomField>
    <fullName>DRC_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Boolean field to indicate whether the invoice is DRC - this is set on invoice creation.</description>
    <inlineHelpText>Boolean field to indicate whether the invoice is DRC - this is set on invoice creation.</inlineHelpText>
    <label>DRC Invoice</label>
    <type>Checkbox</type>
</CustomField>