unpackaged/main/default/objects/Customer_Invoice__c/fields/Email_Invoice_Sent__c.field-meta.xml
<CustomField>
    <fullName>Email_Invoice_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Invoice Sent</label>
    <type>Checkbox</type>
</CustomField>