unpackaged/main/default/objects/Customer_Invoice__c/fields/Email_Outstanding_Sent__c.field-meta.xml
<CustomField>
    <fullName>Email_Outstanding_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Outstanding Sent</label>
    <type>Checkbox</type>
</CustomField>