unpackaged/main/default/objects/Customer_Invoice__c/fields/Exchequer_Account_Reference__c.field-meta.xml
<CustomField>
    <fullName>Exchequer_Account_Reference__c</fullName>
    <formula>Account__r.Exchequer_Ref__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exchequer Account Reference</label>
    <type>Text</type>
</CustomField>