unpackaged/main/default/objects/Customer_Invoice__c/fields/Exchequer_General_Ledger_Code_Number__c.field-meta.xml
<CustomField>
    <fullName>Exchequer_General_Ledger_Code_Number__c</fullName>
    <formula>Exchequer_General_Ledger_Code__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exchequer General Ledger Code Number</label>
    <type>Text</type>
</CustomField>