unpackaged/main/default/objects/Customer_Invoice__c/fields/Final_Demand_Sent__c.field-meta.xml
<CustomField>
    <fullName>Final_Demand_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Final Demand Sent</label>
    <type>Checkbox</type>
</CustomField>