unpackaged/main/default/objects/Customer_Invoice__c/fields/Final_Demand_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Demand_Sent_Date__c</fullName>
    <label>Final Demand Sent Date</label>
    <type>Date</type>
</CustomField>