unpackaged/main/default/objects/Customer_Invoice__c/fields/Final_Notice_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Notice_Sent_Date__c</fullName>
    <label>Final Notice Sent Date</label>
    <type>Date</type>
</CustomField>