unpackaged/main/default/objects/Customer_Invoice__c/fields/Final_Notice_To_Be_Served__c.field-meta.xml
<CustomField>
    <fullName>Final_Notice_To_Be_Served__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Final Notice To Be Served</label>
    <type>Checkbox</type>
</CustomField>