unpackaged/main/default/objects/Customer_Invoice__c/fields/Fixed_Price_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Price_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fixed Price Invoice</label>
    <type>Checkbox</type>
</CustomField>