unpackaged/main/default/objects/Customer_Invoice__c/fields/Franchisee_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Franchisee_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Franchisee Invoice</label>
    <type>Checkbox</type>
</CustomField>