unpackaged/main/default/objects/Customer_Invoice__c/fields/GL_Code__c.field-meta.xml
<CustomField>
    <fullName>GL_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GL Code</label>
    <referenceTo>General_Ledger_Code__c</referenceTo>
    <relationshipName>Sales_ledgers</relationshipName>
    <type>Lookup</type>
</CustomField>