unpackaged/main/default/objects/Customer_Invoice__c/fields/GL_Code_Number__c.field-meta.xml
<CustomField>
    <fullName>GL_Code_Number__c</fullName>
    <formula>GL_Code__r.Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GL Code Number</label>
    <type>Text</type>
</CustomField>