unpackaged/main/default/objects/Customer_Invoice__c/fields/Interest_Fee_Owed__c.field-meta.xml
<CustomField>
    <fullName>Interest_Fee_Owed__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Interest Fee Owed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>