unpackaged/main/default/objects/Customer_Invoice__c/fields/Invoice_Document_URL__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Document_URL__c</fullName>
    <label>Invoice Document URL</label>
    <type>Url</type>
</CustomField>