unpackaged/main/default/objects/Customer_Invoice__c/fields/Invoice_Generation_Complete__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Generation_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invoice Generation Complete</label>
    <type>Checkbox</type>
</CustomField>