unpackaged/main/default/objects/Customer_Invoice__c/fields/Is_Job_Project_Managed__c.field-meta.xml
<CustomField>
    <fullName>Is_Job_Project_Managed__c</fullName>
    <formula>TEXT(Job__r.Project_Managed__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Job Project Managed</label>
    <type>Text</type>
</CustomField>