unpackaged/main/default/objects/Customer_Invoice__c/fields/Job__c.field-meta.xml
<CustomField>
    <fullName>Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job</label>
    <referenceTo>Job__c</referenceTo>
    <relationshipName>Customer_Invoices_Credits</relationshipName>
    <type>Lookup</type>
</CustomField>