unpackaged/main/default/objects/Customer_Invoice__c/fields/Job_Contact__c.field-meta.xml
<CustomField>
    <fullName>Job_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Customer Invoices</relationshipLabel>
    <relationshipName>Customer_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>