unpackaged/main/default/objects/Customer_Invoice__c/fields/Job_Go_Live_Check__c.field-meta.xml
<CustomField>
    <fullName>Job_Go_Live_Check__c</fullName>
    <formula>TEXT(Job__r.Go_Live_check__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Go Live Check</label>
    <type>Text</type>
</CustomField>