unpackaged/main/default/objects/Customer_Invoice__c/fields/Job_Go_Live_Status__c.field-meta.xml
<CustomField>
    <fullName>Job_Go_Live_Status__c</fullName>
    <formula>TEXT(Job__r.Go_Live_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Go Live Status</label>
    <type>Text</type>
</CustomField>