unpackaged/main/default/objects/Customer_Invoice__c/fields/Job_Number__c.field-meta.xml
<CustomField>
    <fullName>Job_Number__c</fullName>
    <formula>Job__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Number</label>
    <type>Text</type>
</CustomField>