unpackaged/main/default/objects/Customer_Invoice__c/fields/Job_Report_for_Customer__c.field-meta.xml
<CustomField>
    <fullName>Job_Report_for_Customer__c</fullName>
    <description>For use in Key Accounts invoice template</description>
    <inlineHelpText>For use in Key Accounts invoice template</inlineHelpText>
    <label>Job Report for Customer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>