unpackaged/main/default/objects/Customer_Invoice__c/fields/Job_Scope_of_Works__c.field-meta.xml
<CustomField>
    <fullName>Job_Scope_of_Works__c</fullName>
    <description>For use in Key Accounts invoice template</description>
    <inlineHelpText>For use in Key Accounts invoice template</inlineHelpText>
    <label>Job Scope of Works</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>