unpackaged/main/default/objects/Customer_Invoice__c/fields/Job_Trade__c.field-meta.xml
<CustomField>
    <fullName>Job_Trade__c</fullName>
    <formula>Job__r.Job_Type_Trade__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Trade</label>
    <type>Text</type>
</CustomField>