unpackaged/main/default/objects/Customer_Invoice__c/fields/Judgement__c.field-meta.xml
<CustomField>
    <fullName>Judgement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Judgement</label>
    <type>Checkbox</type>
</CustomField>