unpackaged/main/default/objects/Customer_Invoice__c/fields/Ledger_Type__c.field-meta.xml
<CustomField>
    <fullName>Ledger_Type__c</fullName>
    <description>Used for integration to determine which Sub Ledger represents this transaction</description>
    <formula>&quot;Sales&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ledger Type</label>
    <type>Text</type>
</CustomField>