unpackaged/main/default/objects/Customer_Invoice__c/fields/Number_of_Payment_Records__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Payment_Records__c</fullName>
    <label>Number of Payment Records</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>