unpackaged/main/default/objects/Customer_Invoice__c/fields/Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Number__c</fullName>
    <description>Order Number provided by &quot;Key Account&quot; customer, and added to invoice as part of &quot;Consolidated Invoice&quot; generation process.</description>
    <inlineHelpText>Order Number provided by &quot;Key Account&quot; customer, and added to invoice as part of &quot;Consolidated Invoice&quot; generation process.</inlineHelpText>
    <label>Order Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>