unpackaged/main/default/objects/Customer_Invoice__c/fields/Outstanding_Payment_Request_URL_II__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Payment_Request_URL_II__c</fullName>
    <formula>&quot;&amp;x=&quot;&amp; TEXT(MOD( MOD(Balance_Outstanding__c,1)*100,8)) &amp;
&quot;&amp;y=&quot;&amp; TEXT(MOD( FLOOR(MOD(Balance_Outstanding__c,1)*100/8),8)) &amp;
&quot;&amp;z=&quot;&amp; TEXT(MOD( FLOOR(MOD(Balance_Outstanding__c,1)*100/(64)),8))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outstanding Payment Request URL II</label>
    <type>Text</type>
</CustomField>