unpackaged/main/default/objects/Customer_Invoice__c/fields/Payment_Authorisation_Signature__c.field-meta.xml
<CustomField>
    <fullName>Payment_Authorisation_Signature__c</fullName>
    <label>Payment Authorisation Signature</label>
    <length>255</length>
    <type>Text</type>
</CustomField>