unpackaged/main/default/objects/Customer_Invoice__c/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Alternative Credit Card</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Cheque</fullName>
            </value>
            <value>
                <fullName>BACs</fullName>
            </value>
            <value>
                <fullName>Bad debt write off</fullName>
            </value>
            <value>
                <fullName>WorldPay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>