unpackaged/main/default/objects/Customer_Invoice__c/fields/Payment_Notes__c.field-meta.xml
<CustomField>
    <fullName>Payment_Notes__c</fullName>
    <description>Any notes in relation to Payments</description>
    <inlineHelpText>Any notes in relation to Payments</inlineHelpText>
    <label>Payment Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>