unpackaged/main/default/objects/Customer_Invoice__c/fields/PO_Number_for_Key_Accounts__c.field-meta.xml
<CustomField>
    <fullName>PO_Number_for_Key_Accounts__c</fullName>
    <formula>Job__r.PO_Number_for_Key_Accounts__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client PO Number</label>
    <type>Text</type>
</CustomField>